<resources>
    <string name="app_name">Rodroid</string>
    <string name="hello_rodi">Hello RoDI</string>
    <string name="buttonRight">Right</string>
    <string name="buttonReverse">Reverse</string>
    <string name="buttonForward">Forward</string>
    <string name="buttonLeft">Left</string>
    <string name="stop">Stop</string>
    <string name="errorMessage">Connection Error</string>
</resources>
