<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rodibot.rodroid.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonReverse"
        android:id="@+id/buttonReverse"
        android:layout_gravity="center_horizontal|bottom"
        android:onClick="moveReverse"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonLeft"
        android:id="@+id/buttonLeft"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="left|center_vertical"
        android:onClick="moveLeft" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonForward"
        android:id="@+id/buttonForward"
        android:layout_gravity="left|top"
        android:onClick="moveForward"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/buttonReverse"
        android:layout_alignStart="@+id/buttonReverse" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonRight"
        android:id="@+id/buttonRight"
        android:layout_gravity="right|center_vertical"
        android:onClick="moveRight"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/buttonStop"
        android:layout_alignBottom="@+id/buttonStop" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:id="@+id/buttonStop"
        android:layout_gravity="center"
        android:clickable="false"
        android:onClick="stop"
        android:layout_alignTop="@+id/buttonLeft"
        android:layout_alignRight="@+id/buttonForward"
        android:layout_alignEnd="@+id/buttonForward" />
</RelativeLayout>
